change my goals
It has been a while since I had edited my personal site. As such, my goals have changed as well.

My goals have transitioned from being a full-stack web developer to allow myself to create highly accessable products for consumers, to
a product manager (something I had only recently been made aware of). This would allow me to focus in on and nurture my interest of business and marketing.
Although full-stack web development covers a large spectrum of creating a web application, I want to learn about and go through the complete product lifcycle-
gathering data, analyzing for trends, determining customer segments, and the many more steps required to turn an idea into a product that users love and enjoy.

I will still be using my web-development experience, as I love just being able to create applications that are easily accessable and user-friendly.

--- a/index.html
+++ b/index.html
@@ -91,15 +91,6 @@
       </div>
     </header>
     <div class="content">
-      <div id="objective">
-        <h2>Objective</h2>
-        <hr>
-        <h3>
-          As an undergraduate in the Computer Science field, my aim is to learn by application and, in doing so, gain knowledge from the professionals I work with.
-
-        </h3>
-        <h3></h3>
-      </div>
       <div id="goals" class="row">
         <div class="col-lg-12">
           <h2>Goals</h2>
@@ -108,30 +99,39 @@
         <div class="col-sm-4 col-xs-12 goal">
           <h3>Short-Term</h3>
           <p>
-            I would like to intern at either:
-            <ul>
-              <li>A statup;</li>
-              <li>A company that emanates innovation and creativity.</li>
-            </ul>
+            I would like to intern at a company that allows me to:
           </p>
+          <ul>
+            <li>Exercise my creative muscles;</li>
+            <li>Take on various and complex challenges that have large scale impacts on user experience;</li>
+            <li>Continue to develop my communication and interpersonal skills;</li>
+            <li>Hone in on the techniques of creating solid and robust business models;</li>
+            <li>Learn more about the financial, marketing, and sales aspects of products.</li>
+          </ul>
         </div>
         <div class="col-sm-4 col-xs-12 goal">
           <h3>Mid-Term</h3>
           <p>
-            After graduation, my goal is to work:
-            <ul>
-              <li>On a personal venture;</li>
-              <li>At a company that values my goal of impacting people's lives on a large scale.</li>
-            </ul>
+            After graduation, my goal is to work at a company that:
           </p>
+          <ul>
+            <li>Values my goal of impacting people's lives on a large scale;</li>
+            <li>Encourages creativity and  openness of ideas;</li>
+            <li>Maintains a culture/atmosphere where everyday feels like an adventure.</li>
+          </ul>
           <p>
-            I aspire to become a full stack web developer, hoping to create applications that service and aid the larger community and have an impact on the people that use them.
+            I aspire to become a Product Manager, to be able to think of and improve upon existing solutions while working with those whose skill sets range from design, to business, to engineering.
           </p>
         </div>
         <div class="col-sm-4 col-xs-12 goal">
           <h3>Long-Term</h3>
           <p>
-            My main reason for entering into the Computer Science field--besides the ingenuity and freedom to create--is to have the ability to solve real-world problems through the use of technology.
+            My main reason for entering into the Computer Science field--besides the ingenuity and freedom to create--is to have the ability to find ways to solve real-world problems which are made efficient by technology.
+            In this way, I can better understand the plausability of solutions which help users with their problems and needs as well as the work required to get to that point. 
+          </p>
+          <p>
+            My aim is to solve extremely large-scaled 
+            problems using knowledge from the experiences and individuals I encountered throughout my career to advance the betterment of the world.
           </p>
         </div>
       </div>
