alter sizing and content of skills
Updated some of the information for my skills section. Added some more relevant/recent information.

--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
           </h2>
           <hr>
         </div>
-        <div class="col-lg-4 col-xs-12" ng-repeat="skill in skills">
+        <div class="col-lg-6" ng-repeat="skill in skills">
           <h3>{{skill.skill}} - {{skill.level}}/10
           </h3>
           <h4>
